API 수집 업데이트 (개발중)

--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ dependencies {
     implementation 'com.seomse.crawling:seomse-crawling:0.7.5'
     implementation 'com.seomse.commons:seomse-commons:1.1.9'
     implementation 'com.seomse.jdbc:seomse-jdbc:0.9.3'
+    implementation 'com.seomse.system:seomse-system:0.9.7'
 
 
     // html parser jsoup
